// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`golden frames portland fixture at lg 120x40: lg 120x40 1`] = `
"┌─locations──────────────┐Portland  45.5°, -122.7°  Mon Aug 24  synced just now                                         
│● Portland ☀️ 65°       │                                                                                              
│                        │┌─main───────────────────────────────────────────────────────────────────────────────────────┐
│                        ││ ╭━━━╮ ╭━━━╮°                   humidity 79%                      dew pt   58°              │
│                        ││ ┃╭━━╯ ┃╭━━╯                    pressure 1015 hPa                 gusts    14 mph           │
│                        ││ ┃╰━━╮ ┃╰━━╮                    uv       --                       vis      --               │
│                        ││ ┃╭━╮┃ ╰━━╮┃                    sunrise  6:22 AM                  sunset   8:03 PM          │
│                        ││ ┃╰━╯┃ ╭━━╯┃                                                                                │
│                        ││ ╰━━━╯ ╰━━━╯                                                                                │
│                        ││ ☀️ Clear sky · feels like 64°                                                              │
│                        ││                                                                                            │
│                        ││ ↑ 6:22 AM ──────────────●────────────────────────────────────────────────────── ↓ 8:03 PM  │
│                        ││                                                                                            │
│                        ││ ── next 48h ────────────────────────────────────────────────────────────────────────────── │
│                        ││ temp       ▂▆▇██92°▇▅▄▁                               ▁▁▂▃▃▂▂                              │
│                        ││         ▁▆█████████████▇▄▁                        ▂▃▅▆████████▆▄▁                          │
│                        ││       ▃▅██████████████████▅▅▄▄▄▄▄             ▁▄▆████████████████▆▄▂                       │
│                        ││      ██████████████████████████████▇▆▆▅▄▂▂▂▃▅▇██████████████████████▆▅▄▃▃▂▂60°▁▁▂▂▃▃▂▃▄▆▇  │
│                        ││      10a           6p            2a            10a           6p            2a              │
│                        ││                                                                                            │
│                        ││ ── 7 day ───────────────────────────────────────────────────────────────────────────────── │
│                        ││                                                                                            │
│                        ││ Mon ☁️ 59°·····███████████████████████████████████████████████████92°                      │
│                        ││ Tue ☁️ 61°·········██████████████████████████████████████·········87°                      │
│                        ││ Wed ☀️ 60°·······██████████████████████████████████████···········85°                      │
│                        ││ Thu 🌤️ 59°·····██████████████████████████████████████·············84°                      │
│                        ││ Fri ⛅️ 58°····██████████████████████████████████··················81°                      │
│                        ││ Sat 🌧️ 57°··██████████████████████████····························74° ☂ 65% · 0.11 in      │
│                        ││ Sun 🌧️ 56°████████████████████████································72° ☂ 40% · 0.06 in      │
│                        ││                                                                                            │
│                        ││                                                                                            │
│                        ││                                                                                            │
│                        ││                                                                                            │
│                        ││                                                                                            │
│                        ││                                                                                            │
│                        ││                                                                                            │
│                        ││                                                                                            │
│                        │└────────────────────────────────────────────────────────────────────────────────────────────┘
│                        │                                                                                              
└────────────────────────┘/ search · r refresh · d del×2 · u units · [ ] locations · ↑↓ scroll · ? help · q quit        
"
`;

exports[`golden frames portland fixture at md 80x24: md 80x24 1`] = `
"Portland  45.5°, -122.7°  Mon Aug 24  synced just now                           
                                                                                
┌─main─────────────────────────────────────────────────────────────────────────┐
│ ╭━━━╮ ╭━━━╮°                   humidity 79%               dew pt   58°       │
│ ┃╭━━╯ ┃╭━━╯                    pressure 1015 hPa          gusts    14 mph    │
│ ┃╰━━╮ ┃╰━━╮                    uv       --                vis      --        │
│ ┃╭━╮┃ ╰━━╮┃                    sunrise  6:22 AM           sunset   8:03 PM   │
│ ┃╰━╯┃ ╭━━╯┃                                                                  │
│ ╰━━━╯ ╰━━━╯                                                                  │
│ ☀️ Clear sky · feels like 64°                                                │
│                                                                              │
│ ↑ 6:22 AM ───────────●─────────────────────────────────────────── ↓ 8:03 PM  │
│                                                                              │
│ ── next 48h ──────────────────────────────────────────────────────────────── │
│ temp      ▄▆▇█92°▇▅▁                          ▁▁▃▃▂▁                         │
│        ▁▅███████████▇▄                    ▁▃▅▇███████▆▁                      │
│       ▃███████████████▇▄▃▄▄▄▂          ▁▄▆█████████████▆▄                    │
│      ████████████████████████▇▇▆▅▄▃▂▁▃▆███████████████████▅▄▃▂▁▁61°▁▂▂▂▂▃▆▇  │
│      10a        5p         1a         8a         4p         12a        7a    │
│                                                                              │
│                                                                       ↓ more │
└──────────────────────────────────────────────────────────────────────────────┘
                                                                                
/ search · r refresh · d del×2 · ↑↓ scroll · ? help · q quit                    
"
`;

exports[`golden frames portland fixture at sm 60x20: sm 60x20 1`] = `
"Portland · Mon 24 · 9:15 AM                                 
                                                            
┌─main─────────────────────────────────────────────────────┐
│ 65° Clear sky · feels like 64°                           │
│ 7 mph N · humidity 79%                                   │
│                                                          │
│ ↑ 6:22 AM ───────●─────────────────────────── ↓ 8:03 PM  │
│                                                          │
│ ── next 12h ──────────────────────────────────────────── │
│ temp         ▅▅▇▇92°█▆▆▂▂                                │
│          ▂▂██████████████▄▄                              │
│          ██████████████████▄▄                            │
│      68°▇████████████████████                            │
│      10a 12p 2p  4p  6p  8p                              │
│                                                          │
│ ── 7 day ─────────────────────────────────────────────── │
│                                                   ↓ more │
└──────────────────────────────────────────────────────────┘
                                                            
r refresh · ↑↓ scroll · ? help · q quit                     
"
`;

exports[`golden frames portland fixture at xs 40x12: xs 40x12 1`] = `
"Portland · 9:15 AM                      
                                        
┌─main─────────────────────────────────┐
│ 65° Clear sky · fl 64°               │
│                                      │
│ ▁▃▅▇█████▇▆▄                         │
│                                      │
│ Mon☁️92° Tue☁️87° Wed☀️85° Thu🌤️84°… │
│                                      │
└──────────────────────────────────────┘
                                        
r u ? q                                 
"
`;

exports[`golden frames portland fixture at md 80x24 with 24h clock and mixed units: md 80x24 mixed 24h 1`] = `
"Portland  45.5°, -122.7°  Mon Aug 24  synced just now                           
                                                                                
┌─main─────────────────────────────────────────────────────────────────────────┐
│ ╱╭╮╱ ╭━━━╮°                    humidity 79%               dew pt   15°       │
│ ╭╯┃╱ ┃╭━╮┃                     pressure 1015 hPa          gusts    14 mph    │
│ ╰╮┃╱ ┃╰━╯┃                     uv       --                vis      --        │
│ ╱┃┃╱ ┃╭━╮┃                     sunrise  06:22             sunset   20:03     │
│ ╭╯╰╮ ┃╰━╯┃                                                                   │
│ ╰━━╯ ╰━━━╯                                                                   │
│ ☀️ Clear sky · feels like 18°                                                │
│                                                                              │
│ ↑ 06:22 ────────────●────────────────────────────────────────────── ↓ 20:03  │
│                                                                              │
│ ── next 48h ──────────────────────────────────────────────────────────────── │
│ temp      ▄▆▇█34°▇▅▁                          ▁▁▃▃▂▁                         │
│        ▁▅███████████▇▄                    ▁▃▅▇███████▆▁                      │
│       ▃███████████████▇▄▃▄▄▄▂          ▁▄▆█████████████▆▄                    │
│      ████████████████████████▇▇▆▅▄▃▂▁▃▆███████████████████▅▄▃▂▁▁16°▁▂▂▂▂▃▆▇  │
│      10         17         01         08         16         00         07    │
│                                                                              │
│                                                                       ↓ more │
└──────────────────────────────────────────────────────────────────────────────┘
                                                                                
/ search · r refresh · d del×2 · ↑↓ scroll · ? help · q quit                    
"
`;

exports[`golden frames portland fixture at sm 60x20 with 24h header clock and mixed units: sm 60x20 mixed 24h 1`] = `
"Portland · Mon 24 · 09:15                                   
                                                            
┌─main─────────────────────────────────────────────────────┐
│ 18° Clear sky · feels like 18°                           │
│ 7 mph N · humidity 79%                                   │
│                                                          │
│ ↑ 06:22 ────────●────────────────────────────── ↓ 20:03  │
│                                                          │
│ ── next 12h ──────────────────────────────────────────── │
│ temp         ▅▅▇▇34°█▆▆▂▂                                │
│          ▂▂██████████████▄▄                              │
│          ██████████████████▄▄                            │
│      20°▇████████████████████                            │
│      10  12  14  16  18  20                              │
│                                                          │
│ ── 7 day ─────────────────────────────────────────────── │
│                                                   ↓ more │
└──────────────────────────────────────────────────────────┘
                                                            
r refresh · ↑↓ scroll · ? help · q quit                     
"
`;
